--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
-    "@coreui/coreui-pro": "^2.1.14",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.3.1",
+    "@coreui/coreui-pro": "2.1.14",
     "@coreui/icons": "0.3.0",
-    "@coreui/react": "^2.5.1",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "flag-icon-css": "^3.3.0",
-    "font-awesome": "^4.7.0",
-    "next": "^9.2.1",
-    "next-compose-plugins": "^2.2.0",
-    "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "reactstrap": "^8.4.1",
-    "simple-line-icons": "^2.4.1",
+    "@coreui/react": "2.5.1",
+    "@zeit/next-css": "1.0.1",
+    "@zeit/next-sass": "1.0.1",
+    "axios": "0.19.2",
+    "bootstrap": "4.4.1",
+    "flag-icon-css": "3.3.0",
+    "font-awesome": "4.7.0",
+    "next": "9.2.1",
+    "next-compose-plugins": "2.2.0",
+    "node-sass": "4.13.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "reactstrap": "8.4.1",
+    "simple-line-icons": "2.4.1",
     "spinkit": "1.2.5"
+  },
+  "devDependencies": {
+    "url-loader": "^3.0.0"
   }
 }
